Improved UI/UX in footer section & fixed alignment.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1522,7 +1522,7 @@ body {
 }
 
 #mt{
-  margin-top: 3rem;
+  margin-top: 2rem;
   align-self: flex-end;
 }
 .footer-right input {
